minimalized server/client logic. No user managment implemented. if more than two user connect, everybode will be disconnected to start again

--- a/vroom/web.config
+++ b/vroom/web.config
@@ -1,6 +1,13 @@
 <configuration>
   <system.webServer>
 
+  
+   <iisnode      
+      node_env="%node_env%"
+      nodeProcessCountPerApplication="1"
+	  maxRequestBufferSize="65536"
+	  />
+  
     <!-- indicates that the server.js file is a node.js application 
     to be handled by the iisnode module -->
 
